--- a/.travis.yml
+++ b/.travis.yml
@@ -43,9 +43,14 @@ before_script:
   make install
   cd ..
 cache: cargo
+
 script:
 - |
-    travis-cargo build -- --all && travis-cargo test -- --all && travis-cargo --only nightly doc-upload
+    travis-cargo build -- --all && travis-cargo test -- --all && travis-cargo --only nightly doc
+
+after_success:
+  - travis-cargo --only nightly doc-upload
+
 env:
   global:
   - PATH=$HOME/.local/bin:$PATH
