remove doc autopublication from Travis config... found a bug

--- a/.travis.yml
+++ b/.travis.yml
@@ -46,10 +46,13 @@ cache: cargo
 
 script:
 - |
-    travis-cargo build -- --all && travis-cargo test -- --all && travis-cargo --only nightly doc --no-deps && travis-cargo --only nightly doc -p zmq_mio --no-deps
+    travis-cargo build -- --all &&
+    travis-cargo test -- --all # &&
+    # travis-cargo --only nightly doc --no-deps &&
+    # travis-cargo --only nightly doc -p zmq_mio --no-deps
 
-after_success:
-  - travis-cargo --only nightly doc-upload
+# after_success:
+#   - travis-cargo --only nightly doc-upload
 
 env:
   global:
