--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "zmq-tokio"
 version = "0.0.1"
-authors = ["Andreas Rottmann <a.rottmann@gmx.at>", "Joaquín R <globojorro@gmail.com"]
+authors = ["Andreas Rottmann <a.rottmann@gmx.at>", "Joaquín R <globojorro@gmail.com>"]
 license = "MIT/Apache-2.0"
 description = "Tokio integation for zeromq"
 repository = "https://github.com/rotty/zmq-tokio"
