--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ tokio-io = "0.1"
 futures = "0.1"
 futures-cpupool = "0.1"
 zmq = { git = "https://github.com/erickt/rust-zmq" }
+zmq-futures = { git = "https://github.com/saibatizoku/zmq-futures" }
 log = "0.3"
 env_logger = "0.3"
 zmq-mio = { path = "zmq-mio" }
